# gaussian-uniform-mixture

./: README.md  pyproject.toml
src/: __init__.py  gum.py  synthetic_data.py
tests/: test_gum.py
