[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussian-uniform-mixture"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pytest",
    "black",
    "scipy",
    "scikit-learn",
    "matplotlib",
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
authors = [{ name = "James Ashford", email = "ashfordj@rocketmail.com" }]
maintainers = [{ name = "James Ashford", email = "ashfordj@rocketmail.com" }]
